@@ -18,6 +18,7 @@ Bugfixes:
 * Bugreport #169: Do not include config.h in the distribution
 * Bugreport #170: Typo in a man page (ods-signer)
 * Bugreport #172: Correction of some macros in a man page (ods-timing)
+* bugreport #173: A man page used a macro that does not exist (ods-ksmutil)
 
 
 OpenDNSSEC 1.1.1 - 2010-07-08
